# vocabulary_trainer

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/: __init__.py  classes.py  main.py
src/dictionary_management/: add_word.py  import_from_file.py
src/testing/: ask_question.py  culculate_score.py  immediate_answers.py  start_quiz.py
src/vocabulary_trainer/: __init__.py
src/vocabulary_trainer/core/: __init__.py  classes.py  exceptions.py  models.py
src/vocabulary_trainer/dictionary/: add_word.py  import_from_file.py  remove_word.py  show_all_words.py
src/vocabulary_trainer/quiz_session/: __init__.py  ask_question.py  quiz_mode.py  test_difficulty.py
src/vocabulary_trainer/testing/: calculate_score.py  culculate_score.py  quiz_mode.py  start_quiz.py  test_difficulty.py
src/vocabulary_trainer/ui/: cli.py  main.py  menu.py
