[project]
name = "vocabulary-trainer"
version = "0.1.0"
description = "A vocabulary learning application with multiple testing modes"
authors = [
    {name = "Diana", email = "dvgribanova@edu.hse.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

dependencies = [
    "click>=8.0.0",           # для улучшенного интерфейса с командами и опциями
    "colorama>=0.4.0",        # для цветного вывода в консоли
]

[project.optional-dependencies]
gui = [
    "customtkinter>=5.0.0"]   # современная версия tkinter для интерфейса
