[project]
name = "vocabulary-trainer"
version = "0.1.0"
description = "A vocabulary learning application with multiple testing modes"
authors = [
    {name = "Diana", email = "dvgribanova@edu.hse.com"}
]
readme = "README.md"
requires-python = "==3.14.*"

[dependency-groups]
dev = [
    "ruff == 0.14.9",
    "pre-commit == 4.5.1"
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
select = ['F', 'E', 'W', 'I', 'N', 'D', 'C', 'T', 'UP', 'YTT', 'ANN', 'ASYNC', 'S', 'B', 'A', 'COM', 'C4', 'ISC',
    'ICN', 'LOG', 'G', 'INP', 'PIE', 'T20', 'PYI', 'Q', 'RSE', 'RET', 'SLF', 'SIM', 'TID', 'TC', 'INT', 'ARG',
    'PL', 'FLY', 'NPY', 'FAST', 'PERF', 'FURB', 'RUF']
ignore = ['D100', 'D104', 'G004', 'RUF001', 'RUF002', 'RUF003', 'COM812']

[tool.ruff.lint.pydocstyle]
convention = 'pep257'

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'