[project]
name = "vocabulary-trainer"
version = "0.1.0"  # Начинайте с первой версии, а не с нулевой - `1.0.0`
description = "A vocabulary learning application with multiple testing modes"
authors = [
    {name = "Diana", email = "dvgribanova@edu.hse.com"}
]
readme = "README.md"
requires-python = "==3.14.*"  # Для tkinter-проектов лучше использовать Python 3.10 - 3.12
# 3.14 - это вообще не самая безопасная версия сегодня, т.к. она все еще в разработке

[dependency-groups]
dev = [
    "ruff == 0.14.9",
    "pre-commit == 4.5.1"
]

[tool.ruff]  # Вы настроили ruff, но не запустили его :( Проект не отформатирован - Found 266 errors.
line-length = 120

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
select = ['F', 'E', 'W', 'I', 'N', 'D', 'C', 'T', 'UP', 'YTT', 'ANN', 'ASYNC', 'S', 'B', 'A', 'COM', 'C4', 'ISC',
    'ICN', 'LOG', 'G', 'INP', 'PIE', 'T20', 'PYI', 'Q', 'RSE', 'RET', 'SLF', 'SIM', 'TID', 'TC', 'INT', 'ARG',
    'PL', 'FLY', 'NPY', 'FAST', 'PERF', 'FURB', 'RUF']
ignore = ['D100', 'D104', 'G004', 'RUF001', 'RUF002', 'RUF003', 'COM812']

[tool.ruff.lint.pydocstyle]
convention = 'pep257'

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'